# fast_zero

./: .gitignore  README.md  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 806dda96afec_update_users_table.py  d4ed4deede52_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
